package com.kedacom.vconf.sdk.main.im.bean;

/**
 * Created by Sissi on 2019/7/29
 */
public class TIMSvrAddr {
}
