package com.kedacom.vconf.sdk.main.im.bean;

/**
 * Created by Sissi on 2019/7/30
 */
public class TImLoginResult {
    public String achReserved;
    public int dwErrID;
    public long dwHandle;
    public int dwReserved;
}
