package com.kedacom.vconf.sdk.main.startup.bean;

public enum ETerminalType {
    TrueLinkAndroidPhone, // 致邻Android手机版
    TrueLinkAndroidPad,   // 致邻Android平板版
    SkyAndroidPhone, // Sky Android手机版
    SkyAndroidPad,   // Sky Android平板版
    Other;             // 其他
}