package com.kedacom.vconf.sdk.main.startup.bean.transfer;

/**
 * Created by Sissi on 2019/7/30
 */
public enum EmResourceType {
    emResourceType_LimitP_Api,			///< 仅限制方数
    emResourceType_LimitPR_Api,			///< 同时限制方数及分辨率
    emResourceType_None_Api,         ///< 平台不支持此功能
}
