package com.kedacom.vconf.sdk.main.startup.bean.transfer;

/**
 * Created by Sissi on 2019/7/24
 */
public class TApsLoginResult {
    public boolean bSucess;
    public int dwHttpErrcode;
    public int dwApsErroce;
    public String achVersion;
    public long dwIP;
    public EmResourceType emResourceType;
}
