package com.kedacom.vconf.sdk.main.startup.bean.transfer;

public class TSrvKeepLiveInfo {
    public String achSysalias;
    public int dwMtAid;
    public int dwTime;
}